<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <Button
        android:id="@+id/btnvideotest"
        android:layout_width="150dip"
        android:layout_height="60dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/video_test"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnvideotest"
        android:layout_marginRight="205dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnwifitest"
        android:layout_toRightOf="@+id/btnvideotest"
        android:gravity="center"
        android:textSize="24sp"
        
         />

    <TextView
        android:id="@+id/text_eth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnethtest"
        android:layout_alignLeft="@+id/text_wifi"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnwifitest"
        android:layout_width="150dip"
        android:layout_height="60dip" 
        android:layout_alignLeft="@+id/btnvideotest"
        android:layout_below="@+id/btnvideotest"
        android:layout_marginTop="120dp"
        android:text="@string/wifi_test"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnsdcardtest"
        android:layout_width="150dip"
        android:layout_height="60dip"
        android:layout_alignLeft="@+id/btnvideotest"
        android:layout_below="@+id/btnvideotest"
        android:layout_marginTop="30dp"
        android:text="@string/sdcard_test" />

    <Button
        android:id="@+id/btnethtest"
        android:layout_width="150dip"
        android:layout_height="60dip"
        android:layout_alignLeft="@+id/btnwifitest"
        android:layout_centerVertical="true"
        android:text="@string/eth0_test"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_wifi"
        android:layout_alignBottom="@+id/text_wifi"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/text_wifi"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_wifi"
        android:layout_below="@+id/btnethtest"
        android:layout_marginTop="75dp"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000ff"
        android:visibility="gone" />

</RelativeLayout>